# NotesAssistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  run_cli.py  settings.py  train.py
experiments/: pdf_to_image.ipynb  sendimageStollm.ipynb  sendimagetollm.ipynb
experiments/output_images/: page_001.txt  page_002.txt  page_003.txt  page_004.txt  page_005.txt
faiss_index/: index.faiss  index.pkl
output_images/: page_002.txt  page_003.txt  page_005.txt  page_006.txt  page_007.txt  page_008.txt  page_009.txt  page_010.txt  page_011.txt  page_012.txt  page_013.txt  page_014.txt  page_015.txt  page_016.txt  page_017.txt  page_018.txt  page_019.txt  page_020.txt
src/: Img_InfoRetriever.py  __init__.py  app.py  config.py  create_chains.py  document_embedder.py  document_processor.py  img_extract.py  llm_handler.py  parse_to_image.py  utils.py
