[project]
name = "notesassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "langchain>=0.1.0",
    "langchain-community==0.0.19",
    "langchain-google-genai>=1.0.1",
    "notebook>=7.4.2",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.0",
]
